# dymos

./: .buildinfo  .bumpversion.cfg  .coveralls.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  BOTTLENECK_ANALYSIS.md  CLAUDE.md  Dockerfile  Dockerfile.arm  LICENSE  MIN_TIME_CLIMB_PROFILE.md  NUMBA_OPTIMIZATIONS.md  OPTIMIZATION_README.md  PERFORMANCE_OPTIMIZATIONS.md  analyze_profile_results.py  build_jupyter_book.py  build_pyoptsparse_ipopt.sh  copy_build_artifacts.py  demo_optimizations.py  dymos_numba_optimizations.py  dymos_optimization_utils.py  genindex.html  index.html  installation.html  objects.inv  pixi.toml  profile_Brachistochrone_GaussLobatto_Full.stats  profile_Brachistochrone_Radau_Full.stats  profile_Brachistochrone_Setup_Phase.stats  profile_dymos.py  profile_dymos_optimized.py  profile_min_time_climb.py  profile_with_numba.py  pyproject.toml  readme.md  release_notes.md  release_notes.txt  search.html  (+4 more)
.claude/dev-docs/: README.md  grid-data.md  openmdao-patterns.md  transcriptions.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  actionlint.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  misc_task.yml
.github/workflows/: dymos_docs_workflow.yml  dymos_release_workflow.yml  dymos_tests_workflow.yml
_modules/: index.html
_modules/dymos/: run_problem.html
_sources/: index.md
_sources/api/: api.md  phase_api.ipynb  run_problem_function.ipynb  trajectory_api.ipynb  transcriptions_api.ipynb
_sources/contributing/: contributing.ipynb
_sources/faq/: add_ode_output_to_timeseries.ipynb  connect_scalar_parameters_to_ode.ipynb  debugging.ipynb  downstream_analysis.ipynb  faq.md  tandem_phases.ipynb  upstream_analysis.ipynb  use_partial_coloring.ipynb
_sources/features/: exploiting_sparsity.ipynb  plotting.ipynb
_sources/getting_started/: collocation.ipynb  defining_odes.ipynb  optimal_control.md  transcriptions.md
api/: api.html  phase_api.html  run_problem.html  run_problem_function.html  trajectory_api.html  transcriptions_api.html
benchmark/: benchmark_balanced_field.py  benchmark_brachistochrone.py  benchmark_gong_birkhoff.py  benchmark_racecar.py
command_line/: command_line.html
contributing/: contributing.html
dev_tools/: build_pyoptsparse_ipopt.sh
docs/: Makefile  _config.yml  _toc.yml  build_jupyter_book.py  build_source_docs.py  clean_notebooks.py  copy_build_artifacts.py  index.md  installation.md  make.bat  references.bib  upload_doc_version.py
docs/api/: api.md  phase_api.ipynb  phase_api.md  run_problem.ipynb  trajectory_api.ipynb
docs/contributing/: contributing.ipynb
docs/dymos_book/: _config.yml  _toc.yml  index.md  references.bib
docs/examples/: examples.md
docs/faq/: add_ode_output_to_timeseries.ipynb  connect_scalar_parameters_to_ode.ipynb  debugging.ipynb  downstream_analysis.ipynb  dymos_simulation.db  dymos_solution.db  tandem_phases.ipynb  upstream_analysis.ipynb  use_partial_coloring.ipynb  use_partial_coloring.md
docs/features/: exploiting_sparsity.ipynb  plotting.ipynb  plotting.md
docs/getting_started/: collocation.ipynb  defining_odes.ipynb  defining_odes.md
docs/release_notes/: whats_new.md
docs/source/: api_docs.rst  conf.py  index.rst
docs/test/: test_jupyter_output_linting.py
dymos/: __init__.py  _options.py  load_case.py  ode_options.py  options.py  run_problem.py
dymos/components/: cross_product_comp.py  dot_product_comp.py
dymos/docs/: Makefile  conf.py  index.rst
dymos/examples/: plotting.py  run_temp_for_glm_integration.py
dymos/glm/: dynamic_interp_comp.py  equality_constraint_comp.py  glm_phase.py
dymos/grid_refinement/: error_estimation.py  grid_refinement_ode_system.py  refinement.py  write_iteration.py
dymos/phase/: __init__.py  analytic_phase.py  direct_shooting_phase.py  options.py  phase.py  simulation_phase.py
dymos/phases/: grid_data.py  options.py  phase_base.py  phase_factory.py
dymos/test/: test_check_partials.py  test_lint_docstrings.py  test_load_case.py  test_mpi.py  test_ode_options.py  test_options.py  test_pep8.py  test_pycodestyle.py  test_readme.py  test_run_problem.py  test_testing_utils.py  test_upgrade_guide.py
dymos/tests/: test_ode_options.py  test_pep8.py
dymos/trajectory/: __init__.py  options.py  phase_linkage_comp.py  trajectory.py
dymos/transcriptions/: __init__.py  grid_data.py  transcription_base.py
dymos/utils/: birkhoff.py  cgl.py  command_line.py  constants.py  doc_utils.py  expressions.py  glm.py  hermite.py  indexing.py  interpolate.py  introspection.py  lagrange.py  lg.py  lgl.py  lgr.py  misc.py  ode_integrator.py  ode_utils.py  rk_methods.py  testing_utils.py
dymos/visualization/: timeseries_plots.py
examples/: examples.html
examples/balanced_field/: balanced_field.html  balanced_field_funccomp.html
examples/brachistochrone/: brachistochrone.html  brachistochrone_tandem_phases.html  brachistochrone_upstream_controls.html  brachistochrone_upstream_init_duration_states.html  brachistochrone_upstream_states.html  plot.html
examples/cannonball_implicit_duration/: cannonball_implicit_duration.html
examples/cart_pole/: cart_pole.html
examples/commercial_aircraft/: commercial_aircraft.html
examples/double_integrator/: double_integrator.html
examples/finite_burn_orbit_raise/: finite_burn_orbit_raise.html
examples/hull/: hull_problem.html
examples/hypersensitive/: hypersensitive.html
examples/min_time_climb/: min_time_climb.html
faq/: add_ode_output_to_timeseries.html  connect_scalar_parameters_to_ode.html  debugging.html  downstream_analysis.html  faq.html  tandem_phases.html  upstream_analysis.html  use_partial_coloring.html
features/: exploiting_sparsity.html  plotting.html
getting_started/: collocation.html  defining_odes.html  optimal_control.html  transcriptions.html
joss/: brachistochrone.py  joss_demo.py  paper.bib  paper.md  test_brachistochrone_for_joss.py
mkdocs/: main.py  mkdocs.yml  references.bib
openmdoc/: __init__.py  ode_function.py  ode_options.py
release_notes/: version_0.16.0.html  version_0.17.0.html
(+1631 files in other folders)
