[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dymos"
dynamic = ["version"]
description = "Open-Source Optimization of Dynamic Multidisciplinary Systems"
license = "Apache-2.0"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "openmdao>=3.27.0",
    "scipy",
]

[project.optional-dependencies]
all = [
    "dymos[docs]",
    "dymos[notebooks]",
    "dymos[test]",
]
docs = [
    "bokeh",
    "ipython",
    "jax",
    "jaxlib",
    "jupyter",
    "jupyter-book==0.14",
    "matplotlib",
    "nbconvert",
    "notebook",
    "numpydoc>=1.1",
    "redbaron",
    "tabulate",
]
notebooks = [
    "ipython",
    "notebook",
    "tabulate",
]
test = [
    "aiounittest",
    "matplotlib",
    "numpydoc>=1.1",
    "packaging",
    "playwright>=1.20",
    "pycodestyle",
    "testflo>=1.3.6",
    "numba",
]

[project.entry-points.openmdao_report]
"dymos.linkage" = "dymos.visualization.linkage.report:_linkage_report_register"

[project.urls]
Homepage = "https://github.com/OpenMDAO/dymos"

[tool.hatch.version]
path = "dymos/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/dymos",
]
