[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dymos"
dynamic = ["version"]
description = "Open-Source Optimization of Dynamic Multidisciplinary Systems"
readme = "readme.md"
license = "Apache-2.0"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=2.0",
    "openmdao>=3.39.0",
    "scipy>=1.13",
]

[project.optional-dependencies]
all = [
    "dymos[docs]",
    "dymos[notebooks]",
    "dymos[test]",
    "dymos[numba]",
]
docs = [
    "bokeh",
    "ipython",
    "jax",
    "jaxlib",
    "jupyter",
    "jupyter-book<2",
    "matplotlib",
    "nbconvert",
    "notebook",
    "numpydoc>=1.1",
    "redbaron",
    "tabulate",
]
notebooks = [
    "ipython",
    "notebook",
    "tabulate",
]
test = [
    "pre-commit",
    "aiounittest",
    "matplotlib",
    "numpydoc>=1.1",
    "packaging",
    "playwright>=1.20",
    "pycodestyle",
    "testflo>=1.3.6",
]
numba = [
    "numba",
]

[project.entry-points.openmdao_report]
"dymos.linkage" = "dymos.visualization.linkage.report:_linkage_report_register"

[project.urls]
Homepage = "https://github.com/OpenMDAO/dymos"

[tool.hatch.version]
path = "dymos/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/dymos",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "D",  # pydocstyle
    "D409", # Section underline sould match length of its name.
    "D417", # Missing argument descriptions.
    "D419", # Missing argument descriptions.
]
ignore = [
    'D100',  # Don't require docstring in public module
    'D101',  # Don't require docstring in public module
    'D102',  # Don't require docstring in public method
    'D104',  # Don't require docstring in public package
    'D200',  # One-line docstring should fit on one line
    'D210',  # Allow whitespace around docstring text.
    'D400',  # Sometimes you just don't need a period.
    'D420',  # Section order varies across ruff versions (preview rule); suppress to avoid CI churn.
    'E741',  # Allow ambiguous variable names (I)
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "test_*.py",
    "*.ipynb",
]
preview = true

[tool.ruff.lint.pycodestyle]
max-line-length = 130

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# Ignore `F401` (unused import) in api files.
"__init__.py" = ["F401"]
# Ignore import related conventions in docs
"**/dymos_book/**" = ["E402", "E501"]
# Ignore Test classifiers
"test_*.py" = ["D", "E", "F"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.11"
pip = "*"
compilers = ">=1.8.0,<2"
networkx = ">=3.3"
packaging = ">=25.0"
requests = ">=2.32.5"

[tool.pixi.pypi-dependencies]
dymos = { path = ".", editable = true }

[tool.pixi.feature.opt.dependencies]
pyoptsparse = ">=2.14.0"
cyipopt = "*"

[tool.pixi.feature.mpi.target.linux-64.dependencies]
openmpi = "*"
mpi4py = "*"
petsc = "*"
petsc4py = "*"

[tool.pixi.feature.mpi.target.osx-64.dependencies]
openmpi = "*"
mpi4py = "*"
petsc = "*"
petsc4py = "*"

[tool.pixi.feature.mpi.target.osx-arm64.dependencies]
openmpi = "*"
mpi4py = "*"
petsc = "*"
petsc4py = "*"

[tool.pixi.feature.test.dependencies]
pre-commit = "*"
ruff = "*"
coverage = ">=7.6.0"
numpydoc = "*"
matplotlib = "*"

[tool.pixi.feature.test.pypi-dependencies]
testflo = "*"

[tool.pixi.feature.docs.dependencies]
jupyter-book = ">=1.0.3,<2"
matplotlib = "*"
numpydoc = "*"
sphinx-sitemap = "*"
jinja2 = "*"
tqdm = "*"

[tool.pixi.feature.docs.pypi-dependencies]
jax = "*"

[tool.pixi.feature.notebooks.dependencies]
ipympl = "*"
notebook = "*"
idna = "*"

[tool.pixi.feature.numba.dependencies]
numba = "*"

[tool.pixi.feature.oldest.dependencies]
python = "3.11.*"
numpy = "2.0.*"
scipy = "1.13.*"

[tool.pixi.feature.oldest.pypi-dependencies]
openmdao = "==3.39.0"

[tool.pixi.feature.dev-local.dependencies]
swig = "*"
ninja = "*"
meson-python = "*"

[tool.pixi.feature.dev-local.tasks]
install-local-openmdao = { cmd = "pip install --no-deps -e $OPENMDAO_SRC", env = { OPENMDAO_SRC = "../openmdao.git" }, description = "Install openmdao from local source in editable mode (dev-local only). Override path via OPENMDAO_SRC." }
install-local-pyoptsparse = { cmd = "pip install --no-build-isolation -e $PYOPTSPARSE_SRC", env = { PYOPTSPARSE_SRC = "../pyoptsparse.git" }, description = "Install pyoptsparse from local source in editable mode (dev-local only). Override path via PYOPTSPARSE_SRC." }

[tool.pixi.environments]
default = { features = ["test", "opt", "mpi"], solve-group = "default" }
dev = { features = ["test", "docs", "notebooks", "numba", "opt", "mpi"], solve-group = "default" }
dev-local = { features = ["test", "docs", "notebooks", "numba", "opt", "mpi", "dev-local"], solve-group = "dev_local" }
oldest = { features = ["test", "oldest", "mpi"], solve-group = "oldest" }

[tool.pixi.tasks]
install-openmdao-github-master = { cmd = "pip install --no-deps git+https://github.com/OpenMDAO/OpenMDAO@master", description = "Install the Github master version of OpenMDAO." }
